Kubernetes/EstrategiasDeploy/Ramped/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-versao-service
spec:
  selector:
    app: api-versao
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
